--- a/SupplierInventorySystem/Views/_ViewImports.cshtml
+++ b/SupplierInventorySystem/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SupplierInventorySystem
 @using SupplierInventorySystem.Models
+@using SupplierInventorySystem.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
